JumpToSectionArrows no longer fade in after welcomeElements, changed to reduce a chaotic amount of effects, contact me button/link added at bottom of page

--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -25,7 +25,7 @@
 
 .JumpToSectionArrowWrapper {
   position: absolute;
-  bottom: 50px;
+  bottom: 55px;
 }
 
 .SkillsWrapper {
@@ -57,6 +57,13 @@
   justify-content: center;
 }
 
-.ContactButton {
+.ContactMe {
+  background-color: rgba(251, 243, 238);
+  border: 1px solid #474744;
   text-align: center;
+  font-size: large;
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  bottom: 45px;
 }
